service-mesh/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sonarqube
spec:
  hosts:
  - "*"
  gateways:
  - sonarqube-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: sonarqube
        port:
          number: 9000
